<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txe_1"
        style="@style/Estilo_Title"
        android:layout_width="247dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp"
        android:text="@string/informacion" />

    <TextView
        android:id="@+id/txe_2"
        style="@style/Estilo_subTitle"
        android:layout_width="353dp"
        android:layout_height="296dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="111dp"
        android:inputType="textMultiLine"
        android:text="@string/informacion2"
        android:textAlignment="textStart" />


    <Button
        android:id="@+id/btn_informa"
        style="@android:style/Widget.Button.Inset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="99dp"
        android:text="@string/btn_info" />

    </RelativeLayout>
