<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:ignore="MissingConstraints">

    <TextView
        android:id="@+id/txv_title"
        style="@style/Estilo_Title"
        android:layout_width="294dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="70dp"
        android:layout_marginStart="71dp"
        android:layout_marginTop="16dp"
        android:text="@string/tb3_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/relativeLayout3"
        android:layout_width="0dp"
        android:layout_height="451dp"
        android:layout_marginTop="9dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txv_title"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/txv12"
            style="@style/Estilo_subTitle"
            android:layout_width="164dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/tb3_info" />

        <TextView
            android:id="@+id/txv14"
            style="@style/Estilo_subTitle"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="39dp"
            android:layout_marginTop="40dp"
            android:text="@string/tb3_txe_monto" />

        <EditText
            android:id="@+id/txe_tab3_1"
            android:layout_width="157dp"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/btn_tab3_mostrar"
            android:layout_alignTop="@+id/txv14"
            android:ems="10"
            android:fontFamily="@font/kaushan_script"
            android:hint="0"
            android:inputType="number"
            android:textAlignment="center"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/txv13"
            style="@style/Estilo_subTitle"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_above="@+id/txe_tab3_3"
            android:layout_alignStart="@+id/txv14"
            android:text="@string/tb3_txe_tasa" />

        <EditText
            android:id="@+id/txe_tab3_2"
            android:layout_width="157dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/txv13"
            android:layout_alignStart="@+id/txe_tab3_1"
            android:ems="10"
            android:fontFamily="@font/kaushan_script"
            android:hint="0"
            android:inputType="number"
            android:textAlignment="center"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/txv_"
            style="@style/Estilo_subTitle"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/txv14"
            android:layout_marginTop="132dp"
            android:text="@string/tb3_txe_fecha" />

        <EditText
            android:id="@+id/txe_tab3_3"
            android:layout_width="157dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/txv_"
            android:layout_alignStart="@+id/txe_tab3_1"
            android:ems="10"
            android:fontFamily="@font/kaushan_script"
            android:hint="0"
            android:inputType="date"
            android:textAlignment="center"
            android:textSize="12sp" />

        <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="192dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/textView3"
            style="@style/Estilo_subTitle"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_alignTop="@+id/divider3"
            android:text="@string/tb3_subtitle" />

        <Button
            android:id="@+id/btn_tab3_mostrar"
            style="@android:style/Widget.Button.Inset"
            android:layout_width="201dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="116dp"
            android:text="@string/tb3__lista" />

        <TextView
            style="@style/Estilo_subTitle"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/txv14"
            android:layout_marginTop="169dp"
            android:text="@string/tb3_txe_tipo" />

        <TextView
            style="@style/Estilo_subTitle"
            android:layout_width="109dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/txv14"
            android:layout_centerVertical="true"
            android:layout_marginStart="-29dp"
            android:text="@string/tb3_txe_peridodo" />

        <Spinner
            android:id="@+id/spinner_tab3"
            android:layout_width="157dp"
            android:layout_height="35dp"
            android:layout_alignStart="@+id/txe_tab3_1"
            android:layout_below="@+id/txv_" />

        <Spinner
            android:id="@+id/spinner_tab3_2"
            android:layout_width="157dp"
            android:layout_height="40dp"
            android:layout_alignStart="@+id/txe_tab3_1"
            android:layout_centerVertical="true" />


    </RelativeLayout>

</android.support.constraint.ConstraintLayout>