<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ignore="MissingConstraints" >

    <RelativeLayout
        android:id="@+id/relativeLayout4"
        android:layout_width="0dp"
        android:layout_height="383dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="17dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txv_title">

        <TextView
            android:id="@+id/txt_dif_edad"
            style="@style/Estilo_Contenido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="108dp"
            android:fontFamily="@font/kaushan_script"
            tools:layout_editor_absoluteX="117dp"
            tools:layout_editor_absoluteY="87dp" />

        <TextView
            android:id="@+id/txv_edad"
            style="@style/Estilo_Contenido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="168dp"
            android:fontFamily="@font/kaushan_script"
            tools:layout_editor_absoluteX="117dp"
            tools:layout_editor_absoluteY="87dp" />

        <TextView
            android:id="@+id/txv15"
            style="@style/Estilo_Contenido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="19dp"
            android:fontFamily="@font/kaushan_script"
            android:text="@string/tb4_seleccionar"
            tools:layout_editor_absoluteX="117dp"
            tools:layout_editor_absoluteY="87dp" />

        <Button
            android:id="@+id/btn_tab4_calcular"
            style="@android:style/Widget.Button.Inset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="121dp"
            android:text="@string/tb4_calcular"
            tools:layout_editor_absoluteX="148dp"
            tools:layout_editor_absoluteY="165dp" />

        <View
            android:id="@+id/divider4"
            android:layout_width="368dp"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="154dp"
            android:background="?android:attr/listDivider"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="240dp" />

        <EditText
            android:id="@+id/date_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btn_tab4_calcular"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="-107dp"
            android:layout_marginStart="56dp"
            android:ems="10"
            android:inputType="date"
            android:textAlignment="center" />

        <ImageButton
            android:id="@+id/ibt_calendar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/date_display"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="33dp"
            app:srcCompat="@drawable/ic_calendar" />
    </RelativeLayout>

    <TextView
        android:id="@+id/txv_title"
        style="@style/Estilo_Title"
        android:layout_width="239dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="72dp"
        android:layout_marginStart="73dp"
        android:layout_marginTop="16dp"
        android:text="@string/tb4_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</android.support.constraint.ConstraintLayout>